# Private-Pay

./: .env.example  .gitignore  AXELAR_TOKEN_FAUCET_GUIDE.md  COMPLETION_REPORT_100_PERCENT.md  FHENIX_INTEGRATION_MERMAID.md  FUNCTIONALITY_VERIFICATION_REPORT.md  HELIUS_SOLANA_ZCASH_BRIDGE.md  IMPLEMENTATION_STATUS_REPORT.md  README.md  package-lock.json  package.json  vite.config.js
.claude/: settings.local.json
.kiro/: README.md  SUMMARY.md
arcium/addchain-master/: Cargo.toml
arcium/private-defi/programs/private_swap/: Cargo.toml
arcium/private-defi/programs/private_swap/src/: lib.rs
aztec/: README.md
backend/: README.md  index.js  package.json
docs/: AXELAR_PRIVACY_POOL_BASE_TO_POLYGON.md  BRIDGE_ARCHITECTURE.md  DEPLOYMENT.md  ENVIRONMENT_SETUP.md  IMPLEMENTATION_STATUS.md  STABLECOIN_DESIGN.md  SUPABASE_SETUP.md  UNSTOPPABLE_WALLET_INTEGRATION.md
fhenix/: README.md  TESTING.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
hardhat/: .gitignore  bun.lockb  hardhat.config.ts  package-lock.json  package.json
scripts/: check_arbitrum_tusdc.js  check_bridge_contract.js  test_arbitrum_approve.js  test_direct_approve.js  test_full_flow.js
solana/: Anchor.toml  Arcium.toml  Cargo.toml  README.md  airdrop1.sh  buffer_upgrade.sh  build_all.sh  build_anchor.sh  build_cargo_sbf.sh  build_verbose.sh  build_zcash_bridge.sh  careful_upgrade.sh  check_and_build.sh  check_balance.sh  check_env.sh  check_program.sh  copy_arcis.sh  copy_keypair.sh  deploy.sh  deploy_fresh.sh  deploy_fresh2.sh  deploy_helius.sh  deploy_new.sh  deploy_only.sh  (+25 more)
(+223 files in other folders)
